Fix spacing after new "readability" font changes.

--- a/crossword.css
+++ b/crossword.css
@@ -32,7 +32,7 @@ body
   margin-right: -1px;
   margin-left: -1px;
   margin-bottom: -18px;
-  margin-top: -8px;
+  margin-top: -10px;
   padding-top: 8px;
   background-repeat: no-repeat;
 }
@@ -56,7 +56,7 @@ body
 }
 
 .top, .bottom {
-  width: 37px;
+  width: 38px;
 }
 .leftside {
   right: 5px;
@@ -64,12 +64,13 @@ body
 }
 .side {
   left: 2px;
-  top: 4px;
+  top: 0px;
 }
 .rule.side {
   width: 37px;
 }
 .top {
+  bottom: 6px;
 }
 .bottom {
   top: 6px;
